--- a/login.html
+++ b/login.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 引入layui -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
+    <!-- log部分 -->
+    <div class="logo layui-main">
+        <img src="/assets/images/logo.png" alt="">
+    </div>
+    <!-- 登录和注册部分 -->
+    <div class="loginAndRegBox">
+        <!-- 登录顶部图片 -->
+        <div class="title-box"></div>
 
+    </div>
 </body>
 
 </html>
