'完成了登录部分的js文件'

--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
     <!-- 引入layui -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
     <link rel="stylesheet" href="/assets/css/login.css">
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/login.js"></script>
 </head>
 
 <body>
@@ -19,7 +21,14 @@
     <div class="loginAndRegBox">
         <!-- 登录顶部图片 -->
         <div class="title-box"></div>
-
+        <!-- 登录框 -->
+        <div class="link_box">
+            <a href="jsvascript:;" id="link_reg">去注册账号</a>
+        </div>
+        <!-- 注册的div -->
+        <div class="reg-box">
+            <a href="jsvascript:;" id="link_login">去登陆</a>
+        </div>
     </div>
 </body>
 
