--- a/login.html
+++ b/login.html
@@ -2,20 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- 引入layui -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="/assets/css/login.css">
+    <!-- 引入layui样式 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <!-- 登录框样式 -->
+    <link rel="stylesheet" href="/assets/css/login.css" />
+    <!-- layui JS文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入jq -->
     <script src="/assets/lib/jquery.js"></script>
+    <!-- 引入baseapi -->
+    <script src="/assets/js/baseAPI.js"></script>
+    <!-- 登录页逻辑 -->
     <script src="/assets/js/login.js"></script>
+
 </head>
 
 <body>
     <!-- log部分 -->
     <div class="logo layui-main">
-        <img src="/assets/images/logo.png" alt="">
+        <img src="/assets/images/logo.png" alt="" />
     </div>
     <!-- 登录和注册部分 -->
     <div class="loginAndRegBox">
@@ -23,11 +31,62 @@
         <div class="title-box"></div>
         <!-- 登录框 -->
         <div class="link_box">
-            <a href="jsvascript:;" id="link_reg">去注册账号</a>
+            <form class="layui-form" id="form_login">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-friends"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-vercode"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-verify="formDemo">登录</button>
+                </div>
+                <!-- 去注册 -->
+                <div class="layui-form-item links">
+                    <a href="jsvascript:;" id="link_reg">去注册账号</a>
+                </div>
+            </form>
         </div>
         <!-- 注册的div -->
         <div class="reg-box">
-            <a href="jsvascript:;" id="link_login">去登陆</a>
+            <form class="layui-form" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-friends"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-vercode"></i>
+                    <input id="reg-pwd" type="password" name="password" required lay-verify="required|pwd"
+                        placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 确认密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-vercode"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 注册 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-verify="formDemo">注册</button>
+                </div>
+                <!-- 去注册 -->
+                <div class="layui-form-item links">
+                    <a href="jsvascript:;" id="link_login">去登陆</a>
+                </div>
+            </form>
+
         </div>
     </div>
 </body>
