完成了后台首页的部分功能

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>登录页面&注册页面</title>
     <!-- 引入layui样式 -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <!-- 登录框样式 -->
