--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <!-- 引入自己的css -->
     <link rel="stylesheet" href="/assets/css/index.css">
     <!-- 引入layUIjs文件 -->
-    <script src="/assets/lib/layui/layui.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入jquery -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入baseAPI -->
+    <script src="/assets/js/baseAPI.js"></script>
+    <!-- 引入自己的js -->
+    <script src="/assets/js/index.js"></script>
 </head>
 
 <body class="layui-layout-body">
@@ -26,7 +32,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;" class="userinfo">
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                        <span class="text-avatar">A</span>
+                        <span class="text-avatar">L</span>
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
@@ -36,7 +42,8 @@
 
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href=""><span class="iconfont icon-tuichu"></span>退出</a></li>
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span
+                            class="iconfont icon-tuichu"></span>退出</a></li>
             </ul>
         </div>
 
@@ -45,7 +52,7 @@
                 <!-- 头像部分 -->
                 <div class="userinfo">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                    <span class="text-avatar">A</span>
+                    <span class="text-avatar">L</span>
                     <span id="welcome">欢迎</span>
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
