完成个人中心的功能代码

--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
-                    <a href="/user/user_info.html" target="fm" class="userinfo">
+                    <a href="javascript:;" class="userinfo">
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
                         <span class="text-avatar">L</span>
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
 
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span
-                            class="iconfont icon-tuichu"></span>退出</a></li>
+                <li class=" layui-nav-item"><a href="javascript:;" id="btnLogout"><span
+                            class="iconfont icon-tuichu"></span>退出</a>
+                </li>
             </ul>
         </div>
 
