--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -43,7 +43,7 @@
             <div class="row2">
                 <input accept="image/png,image/jpeg" type="file" name="" id="file" style="display: none;">
                 <button id="btnChooseImage" type="button" class="layui-btn">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger">确定</button>
+                <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
             </div>
 
         </div>
