--- a/article/art_list.html
+++ b/article/art_list.html
@@ -36,29 +36,31 @@
                     <button class="layui-btn" lay-submit lay-filter="formDemo">筛选</button>
                 </div>
             </form>
+            <!-- 列表区域 -->
+            <table class="layui-table">
+                <colgroup>
+                    <col />
+                    <col width="150" />
+                    <col width="180" />
+                    <col width="150" />
+                    <col width="150" />
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>文章标题</th>
+                        <th>分类</th>
+                        <th>发表时间</th>
+                        <th>状态</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <!-- 分页区域 -->
+            <div id="pageBox"></div>
         </div>
     </div>
-    <!-- 列表区域 -->
-    <table class="layui-table">
-        <colgroup>
-            <col />
-            <col width="150" />
-            <col width="180" />
-            <col width="150" />
-            <col width="150" />
-        </colgroup>
-        <thead>
-            <tr>
-                <th>文章标题</th>
-                <th>分类</th>
-                <th>发表时间</th>
-                <th>状态</th>
-                <th>操作</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-    <!-- 分页区域 -->
+
 
     <!-- 列表数据的模板结构 -->
     <script type="text/html" id="tpl-table">
@@ -69,8 +71,9 @@
             <td>{{$value.pub_date|dataFormat}}</td>
             <td>{{$value.state}}</td>
             <td>
-                <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                <button type="button" class="layui-btn layui-btn-xs btn-edit" data-id="{{$value.Id}}">编辑</button>
+                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete"
+                    data-id='{{$value.Id}}'>删除</button>
             </td>
         </tr>
         {{/each}}
