--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                         <dl class="layui-nav-child">
                             <dd><a href="/article/art_cate.html" target="fm"><i
                                         class="layui-icon layui-icon-export"></i>文章类别</a></dd>
-                            <dd><a href="/article/art_list.html" target="fm"><i
+                            <dd id="a2"><a href="/article/art_list.html" target="fm"><i
                                         class="layui-icon layui-icon-shrink-right"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-next"></i>发表文章</a></dd>
+                            <dd id="a3"><a href="/article/art_pub.html" target="fm"><i
+                                        class="layui-icon layui-icon-next"></i>发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
