--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -1,52 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- 引入layui样式 -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <!-- 引入自己的样式 -->
-    <link rel="stylesheet" href="/assets/css/user/user_avatar.css">
+    <link rel="stylesheet" href="/assets/css/user/user_avatar.css" />
+    <!-- 引入裁剪图片js文件 -->
     <link rel="stylesheet" href="/assets/lib/cropper/cropper.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- 卡片区域 -->
     <div class="layui-card">
-        <div class="layui-card-header">更换头像</div>
-        <div class="layui-card-body">
-            <!-- 第一行的图片裁剪和预览区域 -->
-            <div class="row1">
-                <!-- 图片裁剪区域 -->
-                <div class="cropper-box">
-                    <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-                    <img id="image" src="/assets/images/sample.jpg" />
-                </div>
-                <!-- 图片的预览区域 -->
-                <div class="preview-box">
-                    <div>
-                        <!-- 宽高为 100px 的预览区域 -->
-                        <div class="img-preview w100"></div>
-                        <p class="size">100 x 100</p>
-                    </div>
-                    <div>
-                        <!-- 宽高为 50px 的预览区域 -->
-                        <div class="img-preview w50"></div>
-                        <p class="size">50 x 50</p>
-                    </div>
-                </div>
+      <div class="layui-card-header">更换头像</div>
+      <div class="layui-card-body">
+        <!-- 第一行的图片裁剪和预览区域 -->
+        <div class="row1">
+          <!-- 图片裁剪区域 -->
+          <div class="cropper-box">
+            <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
+            <img id="image" src="/assets/images/sample.jpg" />
+          </div>
+          <!-- 图片的预览区域 -->
+          <div class="preview-box">
+            <div>
+              <!-- 宽高为 100px 的预览区域 -->
+              <div class="img-preview w100"></div>
+              <p class="size">100 x 100</p>
             </div>
-
-            <!-- 第二行的按钮区域 -->
-            <div class="row2">
-                <input accept="image/png,image/jpeg" type="file" name="" id="file" style="display: none;">
-                <button id="btnChooseImage" type="button" class="layui-btn">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
+            <div>
+              <!-- 宽高为 50px 的预览区域 -->
+              <div class="img-preview w50"></div>
+              <p class="size">50 x 50</p>
             </div>
-
+          </div>
         </div>
+
+        <!-- 第二行的按钮区域 -->
+        <div class="row2">
+          <input
+            accept="image/png,image/jpeg"
+            type="file"
+            name=""
+            id="file"
+            style="display: none;"
+          />
+          <button id="btnChooseImage" type="button" class="layui-btn">
+            上传
+          </button>
+          <button
+            type="button"
+            class="layui-btn layui-btn-danger"
+            id="btnUpload"
+          >
+            确定
+          </button>
+        </div>
+      </div>
     </div>
     <!-- 引入layUIjs文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
@@ -54,12 +67,11 @@
     <script src="/assets/lib/jquery.js"></script>
     <!-- 引入自己的js -->
     <script src="/assets/lib/cropper/Cropper.js"></script>
-
+    <!-- 图片裁剪 -->
     <script src="/assets/lib/cropper/jquery-cropper.js"></script>
     <!-- 导入baseAPI -->
     <script src="/assets/js/baseAPI.js"></script>
     <!-- 引入自己的js -->
     <script src="/assets/js/user/user_avatar.js"></script>
-</body>
-
+  </body>
 </html>
